--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
         <figure>
-          <video src="coordenaçao2 mp4.mp4" muted autoplay playsinline></video>
+          <video src="coordenaçao2 mp4.mp4" autoplay playsinline></video>
         </figure>
         </div>
       </section>
