add vídeo Feira Fisoterápica
add vídeo Feira Fisoterápica

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             <video class="fvpInf" src="FVP_INF.mp4" autoplay playsinline> <p> </p></video>
           </figure>
 
+           <figure>
+            <video class="fvpInf" src="Terceira_Feira.mp4" autoplay playsinline> <p> </p></video>
+          </figure>
+
 
           <figure>
             <img src="image/vestibular26.1.jpg" alt="Slide 1">
@@ -54,7 +58,6 @@
 
           <figure>
             <img src="image/Novembro Azul2.jpg" alt="Slide 1">
-           
           </figure>
 
           <figure>
