--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <img src="image/111111111.jpeg" alt="Slide 1">
           </figure>
 
+          <figure>
+            <img class="fvpInf" src="image/Design sem nome (1).png" alt="Slide 1">
+          </figure>
+
          
           <!--<figure>
             <video class="fvpInf" src="FVP_INF.mp4" autoplay playsinline> <p> </p></video>
@@ -70,6 +74,10 @@
           </figure>
 
           <figure>
+            <img class="fvpInf" src="image/Design sem nome (1).png" alt="Slide 1">
+          </figure>
+
+          <figure>
             <img class="fvpInf" src="image/26.1-04.jpg" alt="Slide 1">
             <figcaption>
              A Faculdade Vale do Pajeú – Unidade São José do Egito deu as boas-vindas aos seus alunos em um primeiro 
@@ -87,6 +95,10 @@
               muito bem-vindos! Que este semestre seja de grandes conquistas 
               💙🎓 #faculdadevaledopajeú #saojosedoegito #2026
             </figcaption>
+          </figure>
+
+          <figure>
+            <img class="fvpInf" src="image/Design sem nome (1).png" alt="Slide 1">
           </figure>
           
 
